Section structuring changed

--- a/Notes/Notes.tex
+++ b/Notes/Notes.tex
@@ -402,9 +402,9 @@ Usually, the series $\{\alpha_n\}$ is compared to a simpler series such as $\fra
 	\end{align*}
 \end{solution}
 
-\subsection{Representation of Polynomials}
+\section{Representation of Polynomials}
 
-\subsubsection{Power series}	
+\subsection{Power series}	
 
 \begin{definition}[Power series representation of polynomials]
 	\begin{align*}
@@ -498,7 +498,7 @@ This representation may lead to loss of significant digits.
 	Therefore, there is a loss of significant digits.
 \end{solution}
 
-\subsubsection{Shifted Power Series}
+\subsection{Shifted Power Series}
 
 \begin{definition}[Shifted power series representation of polynomials]
 	\begin{align*}
@@ -542,7 +542,7 @@ Hence, this representation does not lead to loss of significant digits.
 	Therefore, there is no loss of significant digits, as the values of $P(6000)$ and $P(6001)$ are the most accurate values possible, using 5 decimal digits.
 \end{solution}
 
-\subsubsection{Newton's Form}
+\subsection{Newton's Form}
 
 \begin{definition}[Newton's form of representation of polynomials]
 	\begin{align*}
@@ -560,7 +560,7 @@ The number of additions or subtractions needed to calculate $P_n(x)$ is
 \end{align*}
 Therefore, the total number of operations needed to calculate $P_n(x)$ is $\mathrm{O}(n^2)$.
 
-\subsubsection{Nested Newton's Form}
+\subsection{Nested Newton's Form}
 
 \begin{definition}[Nested Newton's form of representation of polynomials]
 	\begin{align*}
@@ -650,7 +650,7 @@ Therefore, the total number of operations needed to calculate $P_n(x)$ is big-O 
 	\end{align*}
 \end{proof}
 
-\subsection{Interpolation}
+\section{Interpolation}
 
 \begin{theorem}[Weierstrass Approximation Theorem]
 	Let $f(x) \in \mathrm{C} [a,b]$, i.e. it is continuous on $[a,b]$.
